<resources>
    <string name="app_name">MenuFragment</string>
    <string name="navigation_drawer_open">Abrir Navegación</string>
    <string name="navigation_drawer_close">Cerrar Navegación</string>
    <string name="menu_camera">Camara</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_manage">Configurar</string>
    <string name="menu_grupo">Grupo</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Envíar</string>
    <string name="homeFragment">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>